reflectapi-demo/tests/errors/invalid_reflect_attribute_path2.stderr
error: failed to parse type reference path: ""
 --> tests/errors/invalid_reflect_attribute_path2.rs:3:29
  |
3 |     #[reflect(output_type = "")]
  |                             ^^
